<resources>
    <string name="app_name">app6</string>
    <string name="name">Name:</string>
    <string name="director">Director:</string>
    <string name="genre">Genre:</string>
    <string name="year">Year:</string>
    <string name="add">Add</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>
    <string name="enter_name">Enter name:</string>
    <string name="enter_director_s_name">Enter director\'s name:</string>
    <string name="enter_genre">Enter genre:</string>
    <string name="enter_year_of_release">Enter year of release:</string>
    <string name="enter_name_for_the_movie_you_want_to_delete">Enter name for the movie you want to delete:</string>
    <string name="index">Index:</string>
</resources>
