<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:hint="@string/enter_name"
            android:id="@+id/delete"
            tools:ignore="MissingConstraints" android:autofillHints=""
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="parent" app:layout_constraintBottom_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:hint="@string/enter_name"
            android:id="@+id/nameadd"
            tools:ignore="MissingConstraints" android:autofillHints=""
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/directoradd"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:hint="@string/enter_director_s_name"
            android:id="@+id/directoradd"
            tools:ignore="MissingConstraints" android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/nameadd" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/genreadd" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:hint="@string/enter_genre"
            android:id="@+id/genreadd"
            tools:ignore="MissingConstraints" android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/directoradd" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/yearadd" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:hint="@string/enter_year_of_release"
            android:id="@+id/yearadd"
            tools:ignore="MissingConstraints" android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/genreadd" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/addadd" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <RatingBar
            android:layout_width="144dp"
            android:layout_height="58dp" android:id="@+id/ratingadd"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/yearadd" app:layout_constraintStart_toEndOf="@+id/addadd"
            android:layout_marginEnd="17dp" android:layout_marginRight="17dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/add"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/addadd"
            app:layout_constraintTop_toBottomOf="@+id/yearadd"
            app:layout_constraintEnd_toStartOf="@+id/ratingadd" android:layout_marginBottom="9dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="13dp" android:layout_marginRight="13dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>